@@ -36,6 +36,7 @@ $pconfig['enable'] = isset($config['dnsmasq']['enable']);
 $pconfig['regdhcp'] = isset($config['dnsmasq']['regdhcp']);
 $pconfig['allservers'] = isset($config['dnsmasq']['allservers']);
 $pconfig['strictorder'] = isset($config['dnsmasq']['strictorder']);
+$pconfig['disablestoprebind'] = isset($config['dnsmasq']['disablestoprebind']);
 
 if (!is_array($config['dnsmasq']['hosts'])) {
 	$config['dnsmasq']['hosts'] = array();
@@ -56,6 +57,7 @@ if ($_POST) {
 	$config['dnsmasq']['regdhcp'] = ($_POST['regdhcp']) ? true : false;
 	$config['dnsmasq']['allservers'] = ($_POST['allservers']) ? true : false;
 	$config['dnsmasq']['strictorder'] = ($_POST['strictorder']) ? true : false;
+	$config['dnsmasq']['disablestoprebind'] = ($_POST['disablestoprebind']) ? true : false;
 
 	write_config();
 	
@@ -121,6 +123,13 @@ if ($_GET['act'] == "del") {
 					  By default, the DNS forwarder will send queries to any of the upstream servers it
 					  knows about and tries to favour servers that are known to be up. Setting
 					  this flag forces it to try each query with each server strictly in order.</td>
+                </tr>
+				<td class="vtable">
+                      <input name="disablestoprebind" type="checkbox" id="disablestoprebind" value="yes" <?php if ($pconfig['disablestoprebind']) echo "checked";?>>
+                      <strong>Disable Stop Rebind</strong><br>
+					  By default, the DNS forwarder will reject (and log) addresses from upstream nameservers 
+					  which are in the private IP ranges. 
+					  This blocks an attack where a browser behind a firewall is used to probe machines on the local network. </td>
                 </tr>
                 <tr> 
                   <td class="vtable">
